k8s_hw1/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
